--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -2,9 +2,10 @@
 
 head, body{
     margin: 0;
+    overflow-x: hidden !important;
 }
 
-p, a, span, label, strong, input, h1, h2{
+p, a, span, label, strong, div, input, h1, h2{
     font-family: 'Raleway', sans-serif;
 }
 
@@ -24,8 +25,8 @@ input::placeholder{
 }
 
 #main-container{
-    /*width: 1200px; /*Res*/
-    /*margin: 0 auto; /*Res*/
+    width: 1200px;
+    margin: 0 auto; 
 }
 
 /*Variables*/
@@ -33,27 +34,4 @@ input::placeholder{
 :root {
     --hl-blue: #4EC2DD;
     --def-white: #c8c8c8;
-}
-
-/*Responsiveness*/
-
-
-/*+1360p */
-@media (min-width: 1360px) and (max-width: 1799px) {
-    .head-searchbar > input{
-        width: 535px;
-    }
-}
-
-/*+1920p */
-@media (min-width: 1800px) {
-    .prod-navi{
-        margin: 37px 0;
-    }
-    .navi-item:nth-last-child(3) {
-        margin-left: 27px;
-    }
-    .navi-item:nth-last-child(1) {
-        margin-right: 68px;
-    }
 }
