--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -25,7 +25,7 @@
     margin-right: 76px;
 }
 
-.head-searchbar > input{
+.searchbar-input{
     width: 579px;
     height: 56px;
     font-size: 16px;
