--- a/src/styles/SearchModal.css
+++ b/src/styles/SearchModal.css
@@ -1,8 +1,17 @@
 .search-container{
     position: absolute;
-    margin-top: 15px;
-    width: auto;
-    transition: .4s ease;
+}
+
+.search-container-inactive{
+    opacity: 0;
+    pointer-events: none;
+}
+
+.search-cell{
+    margin: 15px 0;
+    padding: 0px 5px;
+    border-radius: 10px;
+    background-color: #e0e0e0;
 }
 
 .search-item{
@@ -10,6 +19,9 @@
     display: flex;
     width: 100%;
     height: 100px;
+    padding: 6px 0px;
+    border-radius: 9px;
+    margin: 4px 0px;
 }
 
 .search-item:nth-child(odd){
@@ -18,8 +30,18 @@
 
 .search-item > img{
     height: inherit;
+    margin: 0 5px;
+    border-radius: 7px;
 }
 
 .s-item-details{
     padding: 0 20px;
+}
+
+.s-item-title{
+    color: var(--def-white);
+}
+
+.s-item-price{
+    color: var(--hl-blue);
 }
